--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-in>
+<main>
   <h1>Hello from Angular App with Webpack</h1>
-  <img src="../../public/images/angular.png">
+  <img src="../../public/img/angular.png">
 </main>
 
