--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <navbar></navbar>
+
 <main>
-  <h1>Hello from Angular App with Webpack</h1>
+  <router-outlet></router-outlet>
+
+    <h1>Hello from Limitless Spa - Angular with Webpack</h1>
   <img src="../../public/img/angular.png">
 </main>
-
