--- a/src/app/navbar.component.html
+++ b/src/app/navbar.component.html
@@ -20,9 +20,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-left" id="lgnavbar">
             <ul class="nav navbar-nav">
-                <li><a routerLink="app/"> Spa Home </a></li>
+                <li><a routerLink="app/"> Home </a></li>
+                <li><a routerLink="sensors">Sensors</a></li>
                 <li><a routerLink="app/contact">Contact</a></li>
-                <li><a routerLink=""> User: {{ userName }} </a></li>
+                <li *ngIf="isLoggedin"><a routerLink="logout"> Logout: {{ userName }} </a></li>
+                <li *ngIf="!isLoggedin"><a routerLink="login"> Login </a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
