LG-11 - working routes now had to upgrade zone.js to 0.7.4 to make it work. http://stackoverflow.com/questions/41241477/angular2-typeerror-cannot-set-property-name-of-undefined

--- a/src/app/navbar.component.html
+++ b/src/app/navbar.component.html
@@ -20,9 +20,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-left" id="lgnavbar">
             <ul class="nav navbar-nav">
-                <li><a routerLink="app/"> Home </a></li>
+                <li><a routerLink=""> Home </a></li>
                 <li><a routerLink="sensors">Sensors</a></li>
-                <li><a routerLink="app/contact">Contact</a></li>
+                <li><a routerLink="contact">Contact</a></li>
                 <li *ngIf="isLoggedin"><a routerLink="logout"> Logout: {{ userName }} </a></li>
                 <li *ngIf="!isLoggedin"><a routerLink="login"> Login </a></li>
             </ul>
