LG-14 - Login component generally working, but navbar is not yet reflecting changes of login status

--- a/src/app/navbar.component.html
+++ b/src/app/navbar.component.html
@@ -23,8 +23,8 @@
                 <li><a routerLink=""> Home </a></li>
                 <li><a routerLink="sensors">Sensors</a></li>
                 <li><a routerLink="contact">Contact</a></li>
-                <li *ngIf="isLoggedin"><a routerLink="logout"> Logout: {{ userName }} </a></li>
-                <li *ngIf="!isLoggedin"><a routerLink="login"> Login </a></li>
+                <li *ngIf="authService.isLoggedin"><a routerLink="logout"> Logout: {{ userName }} </a></li>
+                <li *ngIf="!authService.isLoggedin"><a routerLink="login"> Login </a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
