--- a/src/app/navbar.component.html
+++ b/src/app/navbar.component.html
@@ -23,8 +23,8 @@
                 <li><a routerLink=""> Home </a></li>
                 <li><a routerLink="sensors">Sensors</a></li>
                 <li><a routerLink="contact">Contact</a></li>
-                <li *ngIf="authService.isLoggedin"><a routerLink="logout"> Logout: {{ userName }} </a></li>
-                <li *ngIf="!authService.isLoggedin"><a routerLink="login"> Login </a></li>
+                <li><a *ngIf="!isLoggedin" routerLink="login">Login</a></li>                
+                <li><a *ngIf="isLoggedin" routerLink="logout">User: {{ userName }} (Logout)</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
