--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <navbar></navbar>
 
 <main>
+  <div class="row">
   <router-outlet></router-outlet>
-
-    <h1>Hello from Limitless Spa - Angular with Webpack</h1>
-  <img src="../../public/img/angular.png">
+  </div>
 </main>
