--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -6,7 +6,7 @@
         </div>
       
         <div class="col-md-6 col-md-offset-3">
-        <form> 
+        <form #f="ngForm" (ngSubmit)="login()"> 
           <div class="form-group">
             <label for="userName"> Username </label>
             <input 
@@ -54,10 +54,9 @@
             </div>
           </div>
           <button 
-            type="button" 
+            type="submit" 
             class="btn btn-primary"
-            [disabled]="!(usernameValue && passwordValue)"
-            (click)="login()">Login</button>
+            [disabled]="!f.valid">Login</button>
         </form> 
         </div>
 
