--- a/src/app/sensorList.component.html
+++ b/src/app/sensorList.component.html
@@ -2,7 +2,8 @@
 <div class="alert alert-info">
     SensorListComponent found
 </div>
-        
+
+<div class="row">        
 <div class="col-md-4 col-md-offset-1">
 <table class="table">
 <thead>
@@ -20,4 +21,9 @@
     <th>{{ sensor.host }}</th>
   </tr>
 </table>  
-</div>    
+</div>   
+</div>
+
+<div class="alert alert-danger" *ngIf="errorMsg">
+    SensorListComponent error: {{ errorMsg }}
+</div> 
