--- a/src/app/sensorList.component.html
+++ b/src/app/sensorList.component.html
@@ -5,7 +5,7 @@
 
 <div class="row">        
 <div class="col-md-4 col-md-offset-1">
-  <i *ngIf="isLoading" class="fa fa-spinner fa-spin fa-3x"></i>
+  <i *ngIf="isLoading" class="fa fa-spinner fa-spin fa-3x darkred"></i>
 <table class="table" *ngIf="!isLoading">
 <thead>
   <tr>
