--- a/src/app/sensorList.component.html
+++ b/src/app/sensorList.component.html
@@ -7,26 +7,32 @@
   <div class="col-md-4 col-md-offset-1">  
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">List of Sensors</h3>
+        <h3 class="panel-title">List of Sensors </h3> 
+
       </div>
       <div class="panel-body">
-        <spinner [visible]="isLoading"></spinner>  
         <table class="table" *ngIf="!isLoading">
           <thead>
             <tr>
+              <th>id</th>
+              <th>name</th>
               <th>host</th>
-              <th>soil</th>
-              <th>date</th>
+              <th>type</th>
             </tr>
-          </thead>
-          <tr *ngFor='let sensor of sensors'>
-            <th>{{ sensor.host }}</th>
-            <th>{{ sensor.soil }}</th>
-            <th>{{ sensor.date }} </th>
+          </thead> 
+          <tr *ngFor='let sensor of sensors' >
+            <td>{{ sensor._id }}</td>
+            <td>{{ sensor.name }}</td>
+            <td>{{ sensor.host }} </td>
+            <td>{{ sensor.type.name }} </td>
           </tr>
         </table>  
+        <spinner [visible]="isLoading"></spinner>
       </div>
     </div>
+    <div  align="right">    
+      <button type="button" class="btn btn-default btn-sm">Add Sensor</button>
+    <div>
   </div>   
 </div>
 
