LG-36 static config service

--- a/src/app/sensorList.component.html
+++ b/src/app/sensorList.component.html
@@ -27,7 +27,7 @@
             <td>{{ sensor.type.name }} </td>
             <td>
               <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" 
+                <button class="btn btn-sm btn-default dropdown-toggle" 
                         type="button" [id]="'dropdown-' + sensor._id" 
                         data-toggle="dropdown" aria-haspopup="true" 
                         aria-expanded="true">
