LG-71, LG-74 jasmine typings version upgrade

--- a/src/app/sensorList.component.html
+++ b/src/app/sensorList.component.html
@@ -10,7 +10,7 @@
         <h3 class="panel-title">List of Sensors </h3> 
       </div>
       <div class="panel-body">
-        <table class="table" *ngIf="!isLoading">
+        <table class="table lspa-table" *ngIf="!isLoading">
           <thead>
             <tr>
               <th>id</th>
