LG-71, LG-74 - layout fix, npm rebuild

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,9 @@ a.navbar-brand {
     color: darkred;
 }
 
+
+.lspa-table { 
+  font-size: 14px;  
+  /* remove when done... */
+  /* background-color: lightpink; */
+}
