--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <navbar></navbar>
 
 <main>
-  <div class="container">
+  <div class="container-fluid">
   <router-outlet></router-outlet>
   </div>
 </main>
