--- a/src/app/sensorList.component.html
+++ b/src/app/sensorList.component.html
@@ -4,12 +4,12 @@
 </div>
 
 <div class="row">        
-  <div class="col-md-4 col-md-offset-1">  
+  <div class="col-md-6">  
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">List of Sensors </h3> 
       </div>
-      <div class="panel-body">
+      <div class="panel-body table-responsive">
         <table class="table lspa-table" *ngIf="!isLoading">
           <thead>
             <tr>
